--- a/notebooks/comparisons.ipynb
+++ b/notebooks/comparisons.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-11T22:32:28.496231600Z",
-     "start_time": "2023-11-11T22:32:27.943334900Z"
+     "end_time": "2023-11-12T19:38:22.205070300Z",
+     "start_time": "2023-11-12T19:38:21.317045300Z"
     }
    },
    "outputs": [],
@@ -19,6 +19,7 @@
     "from omnibelt import human_readable_number\n",
     "import omnifig as fig\n",
     "from sink import database, misc\n",
+    "from sink.processing import recursive_collect_dupes\n",
     "import humanize\n",
     "import pandas as pd\n",
     "fig.initialize()"
@@ -26,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
-      "text/plain": "<sink.database.FileDatabase at 0x27ac3ed2880>"
+      "text/plain": "<sink.database.FileDatabase at 0x295484ba890>"
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,11 +45,72 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-11T23:52:51.101554900Z",
-     "start_time": "2023-11-11T23:52:51.094048400Z"
+     "end_time": "2023-11-12T19:38:22.220727800Z",
+     "start_time": "2023-11-12T19:38:22.205070300Z"
     }
    },
    "id": "976d4b6ebee1535f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "103989"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicates = list(db.find_all_duplicates())\n",
+    "len(duplicates)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-12T19:40:00.247240600Z",
+     "start_time": "2023-11-12T19:39:58.578849700Z"
+    }
+   },
+   "id": "afeaf185eaf59e4e"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'00000000000000000000000000000000'"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicates[0][0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-12T19:45:31.475193300Z",
+     "start_time": "2023-11-12T19:45:31.459692400Z"
+    }
+   },
+   "id": "bec19fc3a7d90656"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6dc537e352795ca3"
   },
   {
    "cell_type": "code",
