prep test v2 db

--- a/notebooks/monitor_candidates.ipynb
+++ b/notebooks/monitor_candidates.ipynb
@@ -977,21 +977,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 57,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'124.4 MB'"
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "humanize.naturalsize(124352542)"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-16T01:21:11.683020700Z",
+     "start_time": "2023-11-16T01:21:11.656795900Z"
+    }
    },
    "id": "ecf15b1c7c896e54"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 58,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'124,352,542'"
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "humanize.intcomma(124352542)"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-16T01:21:42.360158100Z",
+     "start_time": "2023-11-16T01:21:42.326106300Z"
+    }
    },
    "id": "cb980d6bf1de424a"
   },
