--- a/notebooks/monitor_candidates.ipynb
+++ b/notebooks/monitor_candidates.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-15T23:55:15.223668300Z",
-     "start_time": "2023-11-15T23:55:14.571649100Z"
+     "end_time": "2023-11-26T18:05:26.449572500Z",
+     "start_time": "2023-11-26T18:05:25.610615100Z"
     }
    },
    "outputs": [],
@@ -33,7 +33,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<sink.database.FileDatabase at 0x24a1fa32890>"
+      "text/plain": "<sink.database.FileDatabase at 0x18427734c10>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -41,43 +41,98 @@
     }
    ],
    "source": [
-    "db = fig.create_config(_type='file-db', db_path=misc.data_root() / 'largetest.db').pull(silent=True)\n",
+    "db = fig.create_config(_type='file-db', db_path=misc.data_root() / 'terra.db').pull(silent=True)\n",
     "db"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-15T23:55:15.245828Z",
-     "start_time": "2023-11-15T23:55:15.225670700Z"
+     "end_time": "2023-11-26T18:05:26.468299600Z",
+     "start_time": "2023-11-26T18:05:26.451575700Z"
     }
    },
    "id": "c080014b12611f55"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "True"
+      "text/plain": "False"
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "base = Path(r'D:\\Trust')\n",
+    "base = Path(r'T:\\Backups\\lauren_backup\\Google_Photos_June2023\\Takeout\\Google Photos\\2-3-23 Oasis Pics\\20230203_155010.jpg')\n",
     "base.exists()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-15T23:55:15.246827300Z",
-     "start_time": "2023-11-15T23:55:15.236699Z"
+     "end_time": "2023-11-26T18:08:36.708990400Z",
+     "start_time": "2023-11-26T18:08:36.702765500Z"
     }
    },
    "id": "e7b3e64cd72de299"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "False"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.exists(base)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-26T18:07:05.952033800Z",
+     "start_time": "2023-11-26T18:07:05.946285100Z"
+    }
+   },
+   "id": "3e1628bd1fe2caef"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b1ffcb9886288a19"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "29c7584382f09a3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1d6dcd0cc7ee53e5"
   },
   {
    "cell_type": "code",
